# costrict-debug

./: README.md  package.json  pnpm-lock.yaml
apps/web-evals/: package.json
artifacts/swebench_verified_test/: Subset.swe_bench_verified__test.json  predictions.json
costrict-debug-cli/: pyproject.toml
costrict-debug-cli/src/costrict_swebench/: __init__.py  cli.py
costrict-debug-cli/src/costrict_swebench/domain/: models.py  types.py
costrict-debug-cli/src/costrict_swebench/infra/: __init__.py  costrict_runner.py  data_loader.py  docker.py  filesystem.py  predictions.py
costrict-debug-cli/src/costrict_swebench/orchestration/: __init__.py  runner.py
docs/: design-cli-orchestrator.md  design-swebench-mode.md  quick-start.md
src/: package.json
src/api/providers/: openrouter.ts  zai.ts
src/api/transform/: model-params.ts
src/core/assistant-message/: presentAssistantMessage.ts
src/core/costrict/: activate.ts
src/core/prompts/sections/: custom-instructions.ts  tool-use-guidelines.ts
src/core/prompts/tools/: execute-command.ts  filter-tools-for-mode.ts  index.ts  types.ts
src/core/swebench/: context-compression.ts  error-handling.ts  flexible-exploration.ts  index.ts  instance-prompts.ts  path-mapper.ts  prompt-generator.ts  repository-config.ts  state-machine.ts  submit-review.ts  test-analyzer.ts  tool-interceptor.ts
src/core/swebench/__tests__/: context-compression.test.ts  enhanced-loop-detection.test.ts  flexible-exploration.test.ts  instance-prompts.test.ts  integration.test.ts  loop-detection.test.ts  output-loop-detection.test.ts  path-mapper.test.ts  phase-reasoning-config.test.ts  progress-logging.test.ts  prompt-generator.test.ts  robustness-fixes.test.ts  state-machine.test.ts  submit-integration.test.ts  submit-review.test.ts  (+6 more)
src/core/task/: Task.ts  build-tools.ts
src/core/tools/: ApplyDiffTool.ts  AttemptCompletionTool.ts  ExecuteCommandTool.ts  validateToolUse.ts
src/core/webview/: ClineProvider.ts
src/extension/: api.ts
src/shared/: tools.ts
webview-ui/: package.json
(+4 files in other folders)
